# ocs_to_odoo

./: .gitignore  README.md  main.py  pyproject.toml  test.py
OCS_db_changes/: memory_triggers.sql
api/: __init__.py  odoo_client.py
config/: __init__.py  settings.py
core/: __init__.py  computer.py
database/: __init__.py  connection.py  queries.py
ocs_db_changes/: create_updates_table.sql  gpu_triggers.sql  hardware_triggers.sql  memory_triggers.sql  monitor_triggers.sql
utils/: getComputers.py  updateComputer.py
